--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -1,5 +1,5 @@
 - name: Anna Sekuła
-  image: /assets/images/AnnaSekuła.jpg
+  image: /assets/images/AnnaSekuła.JPG
   bio: "Anna is a PhD candidate in Comparative Analysis of Institutions, Economics and Law at the University of Turin and Collegio Carlo Alberto, Italy. In her work she focuses on the dynamics of change in legal pluralism and studies developments in human and environmental rights litigation across jurisdictions. She is also interested in methodology and philosophy of law and economics." 
   website: 
 
