--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -76,5 +76,5 @@
 - date: 2021-07-02
   name: Invited speakers and workshop on individual projects 
   events:
-    - name: "10:00 - 12:15 Ridhi Kashyap (*Zoom*)"
+    - name: "10:00 - 12:15 Ridhi Kashyap: Demography and the Digital Revolution: Promises and Pitfalls of a Changing Data Ecosystem (*Zoom*)"
     - name: "12:15 - 12:30 SICSS Salutation"
