--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -2,7 +2,7 @@
 
 - date: 2021-06-13
   events:
-    - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
+    - name: "5:00 - 6:00pm Meet-and-greet (*Zoom*)"
 
 - date: 2021-06-14
   name: Introduction and Ethics
