--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -91,7 +91,7 @@
       - name: "Networking"
         time: "22:00-22:30"       
       - name: "[Replication Codes]()"
-      - name: "Related SICSS Learning Material: ["Visualization" and "Communicating and Collaborating"](https://sicss.io/boot_camp/)"     
+      - name: "Related SICSS Learning Material: [Visualization-Communicating and Collaborating](https://sicss.io/boot_camp/)"     
         
        
 
