--- a/_data/2021/taiwan/speakers.yml
+++ b/_data/2021/taiwan/speakers.yml
@@ -1,1 +1,35 @@
-- name:
+- name: Christy Pu
+  bio: "Christy Pu is currently affiliated with the Institute of Public Health, National Yang
+Ming Chiao Tung University (國立陽明交通大學). She obtained a PhD degree in
+Public Health and a MSC degree in Economics. She is a health economist by training.
+Her research interests lie in national health accounts formulation and estimation,
+out-of-pocket medical spending, and patient behavior. She has been working with
+Taiwan’s National Health Insurance claims data as well as several other national
+datasets over the past ten years." 
+  image: 
+  website: 
+  
+- name: Cheng-Te Li (李政德)
+  bio: "Cheng-Te Li (李政德). is an Associate Professor at Institute of Data Science and 
+  Department of Statistics, National Cheng Kung University (NCKU), Tainan, Taiwan. He 
+  received his Ph.D. degree (2013) from Graduate Institute of Networking and Multimedia,
+  National Taiwan University. Before joining NCKU, he was an Assistant Research Fellow 
+  (2014-2016) at CITI, Academia Sinica. My research interests target at Machine Learning, 
+  Deep Learning, Data Mining, Social Networks and Social Media Analysis, Recommender Systems, 
+  and Natural Language Processing. Problems he aims to tackle are inspired by real-world 
+  applications with Massive Datasets. He currently leads the Networked Artificial Intelligence 
+  Laboratory (NetAI Lab) at NCKU."
+
+- name: Hsuan-Wei (Wayne) Lee
+  bio: "Hsuan-Wei (Wayne) Lee is an Assistant Research Fellow at the Institute of Sociology, 
+  Academia Sinica in Taiwan. He received his Ph.D. in Mathematics from UNC-Chapel Hill in 2016. 
+  His research, as well as a considerable portion of my collaborative work, addresses complex systems, 
+  computational sociology, dynamics on networks, and evolutionary games. Often using computer 
+  simulations and knowledge in graph theory, differential equations, combinatorics, 
+  stochastic processes, applied statistics, and machine learning techniques, he investigates all 
+  kinds of networks, especially social systems, their characteristics, formation, evolution, 
+  and often predictions of system behavior. He has publications in Physical Review E, Social Science Research, 
+  PloS ONE, Journal of Complex Systems, and Social Network."
+  
+- name: Hsuan-lei Shao
+- name: 楊子霆
