--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -69,7 +69,7 @@
 - date: 2021-07-01
   name: Invited speakers and workshop on individual projects 
   events:
-    - name: "10:00 - 12:15 Sönke Ehret (*Zoom*)"
+    - name: "10:00 - 12:15 Sönke Ehret:Online Experiments and Virtual Labs: Issues, Trends, and Practical Matters (*Zoom*)"
     - name: "12:30 - 13:45 Brown Bag Seminar: Workshop Individual Projects (*Zoom*)"
     - name: "14:00 - 16:30 Francesco Rampazzo (*Zoom*)"
 
