--- a/_data/2021/law/speakers.yml
+++ b/_data/2021/law/speakers.yml
@@ -2,6 +2,11 @@
   image: /assets/images/AngelaDorrough.jpg
   bio: "Dr. Angela Dorrough is a Postdoctoral Researcher in Social Psychology at the University of Cologne. She started her academic career as a research fellow at the Max Planck Institute for Research on Collective Goods and finished her PhD at the University of Goettingen in 2017. Her research can be divided roughly into two main areas: One the one hand she investigates the determinants of cross-cultural cooperation behavior; on the other hand, her research is dedicated to discrimination (e.g., in selection processes) and potential interventions (e.g., quota rules) to reduce discrimination. For her research she combines methods of economics and psychology to test social psychological theories. Furthermore, she is committed to transparency and replicability in research and communicates these principles as part of her teaching activities."
   website: http://soccco.uni-koeln.de/angela-dorrough.html
+  
+- name: Michael A. Livermore
+  image: /assets/images/MichaelLivermore.jpg
+  bio: "Michael A. Livermore is a legal academic whose research focuses on regulatory review, environmental law, cost-benefit analysis, and the application of data science techniques to legal texts. He frequently collaborates on interdisciplinary projects with researchers in other academic fields, including economics, computer science, neurology, and the humanities. He is a graduate of New York University School of Law and clerked for Judge Harry T. Edwards on the U.S. Court of Appeals for the D.C. Circuit."
+  website: https://www.law.virginia.edu/faculty/profile/mal5un/2457619
 
 - name: Gijs van Dijck
   image: /assets/images/GijsvanDijck.jpg
