--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -10,7 +10,7 @@
     - name: "12.30 - 13.00 Introduction and logistics (*Zoom*)"
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
     - name: "14.00 - 14.30 Break"
-    - name: "14.30 - 15.30 Guest speaker (*Zoom*)"
+    - name: "14.30 - 15.30 Guest speaker: Teun J Dekker (*Zoom*)"
     - name: "15.30 - 15.45 Introduction to the group exercise: [Lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md) (*Zoom*)"
     - name: "15.45 - 17.30 Group exercise: [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "17.30 - 17.45 Break"
@@ -20,7 +20,7 @@
 - date: 2021-06-15
   name: "<b>Digital Trace Data</b>"
   events:
-    - name: "12.00 - 13.00 Guest speaker  (*Zoom*)"
+    - name: "12.00 - 13.00 Guest speaker: Michael Veale (*Zoom*)"
     - name: "13.00 - 13.15 Break"
     - name: "13.15 - 14.15 Small group lunches (*Zoom*)"
     - name: "14.15 - 14.45 Break"
@@ -83,14 +83,15 @@
 - date: 2021-06-23
   name: "<b>Work on group projects</b>"
   events:
-    - name: "16.00 - 17.15 Panel Debate"
-    - name: "18.00 - 19.00 Office hours (*Zoom*)"
+    - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
+    - name: "16.30 - 17.30 Office Hours (*Zoom*)"
+    - name: "18.00 - 19.30 Panel discussion on the (many) paths to computational social science research in law (*Zoom*)"
 
 - date: 2021-06-24
   name: "<b>Work on group projects</b>"
   events:
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
-    - name: "17.00 - 18.00 Office hourse (*Zoom*)"
+    - name: "17.00 - 18.00 Office hours (*Zoom*)"
 
 - date: 2021-06-25
   name: "<b>Group Projects Presentations</b>"
